Mon Jun 29 19:57:20 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* Flax.pm,Flax/,README,t/test.pl: Initial import of flax client for
	  Perl, thanks to Vittal from Cognidox.